fixed form spacing on A5

--- a/src/styles.css
+++ b/src/styles.css
@@ -67,7 +67,9 @@ th {
     text-align: left;
   }
     
-
+.smallrow{
+    height: 5em;
+}
 .descp {
     font-size: 16px;
     color: white;
